--- a/pages/server.html
+++ b/pages/server.html
@@ -40,26 +40,97 @@
     <div class="title">服务对象</div>
     <div class="desc">多种服务方式，提供优质的教育</div>
     <div class="content-box">
-        <img src="../images/server/self-img.png" alt="">
-        <div class="description"></div>
-        <ul class="list-box">
-            <li>
-                <img src="" alt="">
-                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
-            </li>
-            <li>
-                <img src="" alt="">
-                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
-            </li>
-            <li>
-                <img src="" alt="">
-                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
-            </li>
-            <li>
-                <img src="" alt="">
-                <div class="text">名师原创课程  由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
-            </li>
-        </ul>
+        <img src="../images/server/self-img.png" alt="" class="img">
+        <div class="description">帮助各行各业有志于从事新一代信息技术产业应用的学员， 扎实技术前沿，把握时代机遇</div>
+        <div class="list-box">
+            <div class="box">
+                <img src="../images/server/course.png" alt="" class="img2">
+                <div class="name">名师原创课程</div>
+                <div class="text">由顶尖高校教师根据最新技术课程研发，紧跟时代，快速迭代</div>
+            </div>
+            <div class="box">
+                <img src="../images/server/study.png" alt="" class="img2">
+                <div class="name">模块学习</div>
+                <div class="text">通过参与多个精心设计的实战项目，全面掌握新一代信息开发技术</div>
+            </div>
+            <div class="box">
+                <img src="../images/server/cooperation.png" alt="" class="img2">
+                <div class="name">参与校企合作项目</div>
+                <div class="text">参加与高校、企业合作的项目，完成学分拿到Offer</div>
+            </div>
+            <div class="box">
+                <img src="../images/server/job.png" alt="" class="img2">
+                <div class="name">推荐就业</div>
+                <div class="text">定期开展双选会、上门招聘等活动，保证学员就业</div>
+            </div>
+        </div>
+        <div class="out-content">
+            <div class="contact">
+                <div class="text">在线咨询</div>
+                <div class="phone">服务热线：13885462898</div>
+            </div>
+        </div>
+        <div class="blank"></div>
+    </div>
+    <div class="content-box">
+        <img src="../images/server/university-img.png" alt="" class="img">
+        <div class="description-ext">加强学校与用人单位的合作，方便双方更好地了解高校毕业生就业市场的供需状况，有效促进毕业生顺利就业和更好地服务用人单位</div>
+        <div class="list-box">
+            <div class="box">
+                <img src="../images/server/enterprise.png" alt="" class="img2">
+                <div class="name">共同搭建实训基地</div>
+                <div class="text">依靠思学行良好的师资、培训课程、教学管理
+                    经验，以及对国内外先进的新一代信息技术的
+                    快速了解，为毕业生开展技能培训和实训</div>
+            </div>
+            <div class="box">
+                <img src="../images/server/cooperation.png" alt="" class="img2">
+                <div class="name">合作办学</div>
+                <div class="text">平台本着"不求所有、但求所用”的原则，利用思学行的
+                    资源优势，与高校一起构建完善的教育资源服务体系</div>
+            </div>
+        </div>
+        <div class="contact">
+            <div class="text">在线咨询</div>
+            <div class="phone">服务热线：13885462898</div>
+        </div>
+        <div class="blank"></div>
+    </div>
+    <div class="content-box">
+        <img src="../images/server/enterprise-img.png" alt="" class="img">
+        <div class="description-ext">以新技术产业人才培养为核心，以“推动区块链等前沿科技落地应用，推动数字经济与实体经济深度融合”为己任，完善教育生态，积极助力培育各区域、各产业经济发展新动能</div>
+        <div class="list-box">
+            <div class="box">
+                <img src="../images/server/emp.png" alt="" class="img2">
+                <div class="name">员工培养</div>
+                <div class="text">提供新一代信息技术人才的培训和认证、新一代信息技
+                    术运营与管理人才的培训和认证、新一代信息技术社会
+                    知识普及型教育</div>
+            </div>
+            <div class="box">
+                <img src="../images/server/company.png" alt="" class="img2">
+                <div class="name">企业赋能</div>
+                <div class="text">进行企业家和高管培训、企业专项定制人才培养、业务
+                    专项战略咨询、企业专项资源对接</div>
+            </div>
+            <div class="box">
+                <img src="../images/server/company-2.png" alt="" class="img2">
+                <div class="name">企业内训</div>
+                <div class="text">明确企业培训目标，严格把控课程设置、授课讲师、
+                    授课时间等相关问题，精准匹配企业需求</div>
+            </div>
+            <div class="box">
+                <img src="../images/server/platform.png" alt="" class="img2">
+                <div class="name">双平台选择</div>
+                <div class="text">提供线上教学平台学习和线下实训双模式培养，企业
+                    可根据自身需要进行选择</div>
+            </div>
+        </div>
+        <div class="contact">
+            <div class="text">在线咨询</div>
+            <div class="phone">服务热线：13885462898</div>
+        </div>
+        <div class="blank"></div>
     </div>
 </div>
 <div class="footer-container">
