--- a/pages/blockchain.html
+++ b/pages/blockchain.html
@@ -16,7 +16,7 @@
     <script src="../js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 </head>
-<body>
+<body style="visibility: hidden">
 <div class='header-container'>
     <div class="header-logo">
         <img class="logo" src="../images/logo.png" alt="">
