--- a/pages/core.html
+++ b/pages/core.html
@@ -16,7 +16,7 @@
     <script src="../js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 </head>
-<body>
+<body style="visibility: hidden">
 <div class='header-container'>
     <div class="header-logo">
         <img class="logo" src="../images/logo.png" alt="">
@@ -32,13 +32,8 @@
             <li><a href="../pages/aboutUs.html">关于我们<span>></span></a></li>
         </ul>
     </div>
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">slider1</div>
-            <div class="swiper-slide">slider2</div>
-            <div class="swiper-slide">slider3</div>
-        </div>
-        <div class="swiper-pagination swiper-pagination-bullets" ></div>
+    <div class="banner-container">
+        <img src="../images/banner1.png" alt="">
     </div>
 </div>
     <div class="core">
@@ -127,11 +122,6 @@
     </div>
 </div>
 <script type="text/javascript">
-		var mySwiper = new Swiper('.swiper-container', {
-			autoplay: 3000, //可选选项，自动滑动
-			pagination: '.swiper-pagination',
-			paginationType: 'bullets',
-		})
 </script>
 </body>
 </html>
