--- a/pages/courseListPage.html
+++ b/pages/courseListPage.html
@@ -39,13 +39,8 @@
             <li><a href="../pages/aboutUs.html">关于我们<span>></span></a></li>
         </ul>
     </div>
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">slider1</div>
-            <div class="swiper-slide">slider2</div>
-            <div class="swiper-slide">slider3</div>
-        </div>
-        <div class="swiper-pagination swiper-pagination-bullets" ></div>
+    <div class="banner-container">
+        <img src="../images/banner1.png" alt="">
     </div>
 </div>
 
