--- a/pages/framework.html
+++ b/pages/framework.html
@@ -16,7 +16,7 @@
     <script src="../js/utils/pm.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
 </head>
-<body>
+<body style="visibility: hidden">
 <!--页头-->
 <div class='header-container'>
     <div class="header-logo">
