--- a/pages/invite.html
+++ b/pages/invite.html
@@ -17,7 +17,7 @@
     <script src="../js/common.js" type="text/javascript" charset="utf-8"></script>
     <script src="../js/invite.js" type="text/javascript" charset="utf-8"></script>
 </head>
-<body>
+<body style="visibility: hidden">
 <div class='header-container'>
     <div class="header-logo">
         <img class="logo" src="../images/logo.png" alt="">
@@ -33,13 +33,8 @@
             <li><a href="../pages/aboutUs.html">关于我们<span>></span></a></li>
         </ul>
     </div>
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">slider1</div>
-            <div class="swiper-slide">slider2</div>
-            <div class="swiper-slide">slider3</div>
-        </div>
-        <div class="swiper-pagination swiper-pagination-bullets" ></div>
+    <div class="banner-container">
+        <img src="../images/banner1.png" alt="">
     </div>
 </div>
 <div class="invite-container">
