--- a/pages/courseList.html
+++ b/pages/courseList.html
@@ -46,7 +46,7 @@
     <div class="title-sub">
         更多精品优质课程
     </div>
-    <div class="pic">
+    <a class="pic" href="courseListPage.html">
         <div class="box">
             <img src="../images/courseList/course1.png" alt="" class="img">
             <div class="tip1">
@@ -73,8 +73,8 @@
                 <s class="tip5">原件¥99.00</s>
             </div>
         </div>
-    </div>
-    <div class="pic">
+    </a>
+    <a class="pic" href="courseListPage.html">
         <div class="box">
             <img src="../images/courseList/course3.png" alt="" class="img">
             <div class="tip1">
@@ -101,8 +101,8 @@
                 <s class="tip5">原件¥99.00</s>
             </div>
         </div>
-    </div>
-    <div class="pic">
+    </a>
+    <a class="pic" href="courseListPage.html">
         <div class="box">
             <img src="../images/courseList/course5.png" alt="" class="img">
             <div class="tip1">
@@ -129,7 +129,7 @@
                 <s class="tip5">原件¥99.00</s>
             </div>
         </div>
-    </div>
+    </a>
     <div class="more">
         加载更多...
     </div>
